# nomad-north-voila

./: .cruft.json  404.html  LICENSE  MANIFEST.in  index.html  move_template_files.sh  pyproject.toml
.github/workflows/: publish.yml  publish_north.yml
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_north_voila/north_tools/voila/: Dockerfile  README.md  __init__.py
src/nomad_north_voila/north_tools/voila_north_tool/: README.md  __init__.py
tests/north_tools/: test_north_tools.py
tutorial/: tutorial.html
